Base Repository eklenerek queryler organizasyon bazında filtrelendi.

--- a/src/main/resources/messages/messages_tr.properties
+++ b/src/main/resources/messages/messages_tr.properties
@@ -3,9 +3,10 @@ authUser.userNotFound.exception=Kullanýcý bulunamadý!
 customer.companyNotFound.exception=Þirket bilgisi bulunamadý.
 reservationDetail.masterNotFound.exception=Rezervasyon üst bilgisi bulunamadý.
 reservationDetail.customerNotFound.exception=Müþteri bilgisi bulunamadý.
-reservationDetail.customerAlreadyExist.exception=Müþteri zaten rezervasyon için tanýmlanmýþ.
-reservationDetail.customerAlreadyExistAnotherReservation.exception="Müþteri baþka bir rezervasyonda tanýmlý."
-accountTransaction.recordNotFound.exception=Hesap Kaydý bulunamadý.
-reservationDetail.recordNotFound.exception=Rezervasyon detayý bulunamadý.
-reservationMaster.roomStatus.exception=Oda durumu rezervasyon için uygun deðil.
-reservationMaster.detailNotFound.exception=Rezervasyona ait detay bulunamadý!
+reservationDetail.customerAlreadyExist.exception=Müþteri zaten rezervasyon için tan?mlanm??.
+reservationDetail.customerAlreadyExistAnotherReservation.exception="Mü?teri ba?ka bir rezervasyonda tan?ml?."
+accountTransaction.recordNotFound.exception=Hesap Kayd? bulunamad?.
+reservationDetail.recordNotFound.exception=Rezervasyon detay? bulunamad?.
+reservationMaster.roomStatus.exception=Oda durumu rezervasyon için uygun de?il.
+reservationMaster.detailNotFound.exception=Rezervasyona ait detay bulunamad?!
+record.notFound.exception=Kay?t Bulunamad?!
