--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -9,3 +9,4 @@ accountTransaction.recordNotFound.exception=Account Transaction not found.
 reservationDetail.recordNotFound.exception=Reservation detail not found.
 reservationMaster.roomStatus.exception=Room status is not valid for reservation.
 reservationMaster.detailNotFound.exception=Master hasn't got resarvation detail!
+record.notFound.exception=Record Not Found!
