Spring and java version updated.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -10,3 +10,14 @@ reservationDetail.recordNotFound.exception=Reservation detail not found.
 reservationMaster.roomStatus.exception=Room status is not valid for reservation.
 reservationMaster.detailNotFound.exception=Master hasn't got resarvation detail!
 record.notFound.exception=Record Not Found!
+##
+base.record-not-found.exception=Record not found!
+auth-user.cannot-create.exception=User couldn't create!
+auth-user.bad-credentials.exception=You entered wrong values!
+auth-user.passive-user.exception=Your user was blocked. You can check your e-mail.
+auth-user.status-incorrect.exception=User status not fit for otp login!
+auth-user.code-expired.exception=OTP Code was expired. New code will send.
+auth-user.code-not-match.exception=Code does not matched!
+auth-user.create-user.success=User created succesfully!
+employee.not-found.exception=Selected employee not found!
+email-validator.business-email.exception=E-mail pattern does not match with business e-mail!
